crates/clinker-exec/tests/snapshots/explain_arbitration__explain_exec_sketches_statistics.snap
---
source: crates/clinker-exec/tests/explain_arbitration.rs
expression: text
---
=== Execution Plan ===

Mode: Streaming
Indices to build: 0
Transforms: 0
Output projections: 1
DAG nodes: 4
arbitration: BackPressurePreferred -> Priority (pause at 0.80·limit, resume below 0.70·limit)

Source DAG:
  Tier 0: orders, products

=== Physical Properties ===

source.products:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=60K, predicted_freed=0B, predicted_subtree_reclaim=0B

source.orders:
  ordering: <none>
  ordering_provenance: NoOrdering
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=N/A, can_back_pressure=true, predicted_peak=90K, predicted_freed=0B, predicted_subtree_reclaim=0B

combine.enriched:
  ordering: <none>
  ordering_provenance: DestroyedByCombine { at_node: "enriched", confidence: Proven }
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: materialized
  arbitration: spill_priority=10, can_back_pressure=false, predicted_peak=150K, predicted_freed=150K, predicted_subtree_reclaim=150K

sink.out:
  ordering: <none>
  ordering_provenance: DestroyedByCombine { at_node: "enriched", confidence: Proven }
  partitioning: Single
  partitioning_provenance: SingleStream
  buffer: streaming
  arbitration: spill_priority=N/A, can_back_pressure=false, predicted_peak=150K, predicted_freed=0B, predicted_subtree_reclaim=0B

=== Buffer Edges ===

edge source.products -> combine.enriched:
  buffer: node_buffer (slot=1)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=60K, predicted_freed=60K (producer: source)

edge source.orders -> combine.enriched:
  buffer: node_buffer (slot=0)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=90K, predicted_freed=90K (producer: source)

edge combine.enriched -> sink.out:
  buffer: node_buffer (slot=2)
  arbitration: spill_priority=0, can_back_pressure=false, predicted_peak=150K, predicted_freed=150K (producer: combine)

=== Estimated Spill Volume ===

Estimated spill volume (per blocking stage):
  [combine:grace_hash] enriched drive=orders build=[products] eq=1 range=0 → 150K
  Total: 150K

Combine 'enriched':
  Strategy: GraceHash (16 partitions)
  Driving input: orders (probe, est. 90 [file metadata] rows)
  Build input: products (build, est. 60 [file metadata] rows)
  Predicate: equalities=1, ranges=0, residual=no
  Equalities:
    - orders.product_id == products.product_id
  Match: first
  On miss: null_fields
  Memory budget (planned share): 64K (soft: 51.20K, hard: 64K)

=== Statistics ===

Row counts:
  orders: ≈90 rows [file metadata] (informs combine build/probe + partition bits)
  products: ≈60 rows [file metadata] (informs combine build/probe + partition bits)

Column sketches:
  products.product_id: 58 distinct [exec sketch]
  products.product_id: heavy hitters [exec sketch, lower bound]: p0=12, p1=9, p2=4
  products.product_id: membership filter, 560 bits / 7 probes [exec sketch, sized from estimate]

=== CXL Expressions ===

=== Type Annotations ===


=== Memory Budget ===

Memory limit: default
Worker threads: 4

=== DAG Topology ===

  ● [source] products (line:16)
  ● [source] orders (line:7)
  ◈ [combine:grace_hash] enriched drive=orders build=[products] eq=1 range=0 (line:25)
  │ [sink] out (line:39)
